--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 <div class="second--canvas">
 	<div class="content">
 		<h2>let's</h2>
-		<h2>celebrate</h2>
-		<h2>and</h2>
+		<h2>Celeb</h2>
+		<h2>And</h2>
 	</div>
 	<div class="canvas--remove"></div>
 </div>
